[package]
name = "ugcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = "0.11.23"
scraper = "0.18.1"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
